syntax = "proto3";
//import "google/protobuf/emtpy.proto";
import "google/protobuf/timestamp.proto";
package parser;
option go_package = "shgpu-table/grpc/parser";

service Parser {
  rpc CheckLocalTableDate(CheckLocalTableModifyDateRequest) returns (CheckLocalTableModifyDateResponse){}
  // rpc OnNewTable(OnNewTableRequest) returns (OnNewTableResponse) {}
  // rpc OnModifyTable(OnModifyTableRequest) returns (OnNewTableResponse) {}
  // rpc GetTableModifyDate(GetTableModifyDateRequest) returns (GetTableModifyDateResponse) {}
}

message CheckLocalTableModifyDateRequest {
  int32 facultyId = 1;
  string tableName = 2;
}

message CheckLocalTableModifyDateResponse {
  google.protobuf.Timestamp modifyDate = 1;
}

message OnNewTableRequest {
  int32 facultyId = 1;
  string tableLink = 2;
  google.protobuf.Timestamp weekBegin = 3;
  google.protobuf.Timestamp weekEnd = 4;
}

message OnNewTableResponse {

}

message OnModifyTableRequest {

}

message OnModifyTableResponse {
  int32 facultyId = 1;
  string tableLink = 2;
  google.protobuf.Timestamp weekBegin = 3;
  google.protobuf.Timestamp weekEnd = 4;
}